# app/Http/Controllers/Tournaments/UpdateTournamentController.php
@@ -10,14 +10,21 @@ use ATP\Services\Tournaments\UpdateTournamentService;
 class UpdateTournamentController extends Controller {   
     /**
     * @OA\Put(
-    *     path="/tournaments",
+    *     path="/tournaments/{id}",
     *     summary="Actualiza un nuevo torneo",
     *     tags={"Tournaments"},
     *     operationId="updateTournament",
+    *     @OA\Parameter(
+    *         name="id",
+    *         in="path",
+    *         description="ID del torneo",
+    *         required=true,
+    *         @OA\Schema(type="integer")
+    *     ),
     * @OA\RequestBody(
     *         required=true,
     *         @OA\JsonContent(
-    *             required={"name", "gender"},
+    *             required={"name"},
     *             @OA\Property(property="name", type="string", example="Torneo de verano"),
     *         )
     *     ),
@@ -32,6 +39,7 @@ class UpdateTournamentController extends Controller {
         UpdateTournamentRequest $updateTournamentRequest, 
         UpdateTournamentService $updateTournamentService
     ): JsonResponse {
+        try {
         $validator = $this->validator->make($updateTournamentRequest->request()->all(), [
             'name' => 'required|string|max:255',
         ]);
@@ -46,6 +54,7 @@ class UpdateTournamentController extends Controller {
         $updateTournamentService->excecute($id, $updateTournamentRequest);
         
         return response()->json(['success' => true], JsonResponse::HTTP_CREATED);
+        } catch(\Exception $ex) { die($ex->getMessage()); }
     }
 }
     
